added a html file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
   <body>
     <h1>Dazzle Daily</h1>
     <h2>Sparkle Through Your Goals, One Habit at a Time!</h2>
+    <div class="container">
+      <div class="habit-list">
+        <div class="habit-item">
+          <input type="checkbox" id="habit1" />
+          <label for="habit1">Drink 8 glasses of water</label>
+        </div>
+        <div class="habit-item">
+          <input type="checkbox" id="habit2" />
+          <label for="habit2">Exercise for 30 minutes</label>
+        </div>
+        <!-- More habit items can be added here -->
+      </div>
+      <div class="add-habit-form">
+        <input type="text" id="new-habit" placeholder="Add a new habit..." />
+        <button id="add-habit-btn">Add Habit</button>
+      </div>
+    </div>
   </body>
 </html>
